POST, GET, PUT e DELETE de restaurantes, e alguns reparos