@@ -3,6 +3,9 @@ package com.lucashcampos.projetodelivery.services;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
 import java.util.Arrays;
+import java.util.List;
+
+import javax.transaction.Transactional;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
@@ -10,10 +13,8 @@ import org.springframework.stereotype.Service;
 
 import com.lucashcampos.projetodelivery.domain.Adicional;
 import com.lucashcampos.projetodelivery.domain.Categoria;
-import com.lucashcampos.projetodelivery.domain.Cidade;
 import com.lucashcampos.projetodelivery.domain.Cliente;
 import com.lucashcampos.projetodelivery.domain.Endereco;
-import com.lucashcampos.projetodelivery.domain.Estado;
 import com.lucashcampos.projetodelivery.domain.ItemPedido;
 import com.lucashcampos.projetodelivery.domain.Pagamento;
 import com.lucashcampos.projetodelivery.domain.PagamentoAVista;
@@ -28,6 +29,7 @@ import com.lucashcampos.projetodelivery.domain.Sorvete;
 import com.lucashcampos.projetodelivery.domain.SorveteCobertura;
 import com.lucashcampos.projetodelivery.domain.SorveteSabor;
 import com.lucashcampos.projetodelivery.domain.SorveteTamanho;
+import com.lucashcampos.projetodelivery.domain.enums.EspecialidadeRestaurante;
 import com.lucashcampos.projetodelivery.domain.enums.EstadoPagamento;
 import com.lucashcampos.projetodelivery.domain.enums.Perfil;
 import com.lucashcampos.projetodelivery.domain.enums.TipoAdicional;
@@ -35,10 +37,8 @@ import com.lucashcampos.projetodelivery.domain.enums.TipoCliente;
 import com.lucashcampos.projetodelivery.domain.enums.TipoProduto;
 import com.lucashcampos.projetodelivery.repositories.AdicionalRepository;
 import com.lucashcampos.projetodelivery.repositories.CategoriaRepository;
-import com.lucashcampos.projetodelivery.repositories.CidadeRepository;
 import com.lucashcampos.projetodelivery.repositories.ClienteRepository;
 import com.lucashcampos.projetodelivery.repositories.EnderecoRepository;
-import com.lucashcampos.projetodelivery.repositories.EstadoRepository;
 import com.lucashcampos.projetodelivery.repositories.ItemPedidoRepository;
 import com.lucashcampos.projetodelivery.repositories.PagamentoRepository;
 import com.lucashcampos.projetodelivery.repositories.PedidoRepository;
@@ -62,12 +62,6 @@ public class DBService {
 
 	@Autowired
 	private ProdutoRepository produtoRepository;
-
-	@Autowired
-	private CidadeRepository cidadeRepository;
-
-	@Autowired
-	private EstadoRepository estadoRepository;
 
 	@Autowired
 	private ClienteRepository clienteRepository;
@@ -108,20 +102,11 @@ public class DBService {
 	@Autowired
 	private RestauranteRepository restauranteRepository;
 
+	@Autowired
+	private RestauranteService restauranteService;
+
+	@Transactional
 	public void InstantiateTestDatabase() throws ParseException {
-
-		Estado est1 = new Estado(null, "Minas Gerais");
-		Estado est2 = new Estado(null, "São Paulo");
-
-		Cidade c1 = new Cidade(null, "Uberlandia", est1);
-		Cidade c2 = new Cidade(null, "São Paulo", est2);
-		Cidade c3 = new Cidade(null, "Campinas", est2);
-
-		est1.getCidades().addAll(Arrays.asList(c1));
-		est2.getCidades().addAll(Arrays.asList(c2, c3));
-
-		estadoRepository.saveAll(Arrays.asList(est1, est2));
-		cidadeRepository.saveAll(Arrays.asList(c1, c2, c3));
 
 		Cliente cli1 = new Cliente(null, "56198765545", "Maria Silva", "lucash_c@yahoo.com.br",
 				TipoCliente.PESSOAFISICA, pe.encode("1234"));
@@ -132,9 +117,9 @@ public class DBService {
 		cli2.getTelefones().addAll(Arrays.asList("55555454", "1111555555"));
 		cli2.addPerfil(Perfil.ADMIN);
 
-		Endereco e1 = new Endereco(null, "Rua das Flores", "300", "Apto 303", "Jardim", "38220834", c1);
-		Endereco e2 = new Endereco(null, "Avenida Matos", "105", "Sala 800", "Centro", "5465465", c2);
-		Endereco e3 = new Endereco(null, "Avenida Floriano", "2106", null, "Centro", "8858585", c2);
+		Endereco e1 = new Endereco(null, "Rua das Flores", "300", "Apto 303", "38220834");
+		Endereco e2 = new Endereco(null, "Avenida Matos", "105", "Sala 800", "5465465");
+		Endereco e3 = new Endereco(null, "Avenida Floriano", "2106", null, "8858585");
 
 		cli1.getEnderecos().addAll(Arrays.asList(e1, e2));
 		cli2.getEnderecos().addAll(Arrays.asList(e3));
@@ -142,8 +127,39 @@ public class DBService {
 		enderecoRepository.saveAll(Arrays.asList(e1, e2, e3));
 		clienteRepository.saveAll(Arrays.asList(cli1, cli2));
 
-		Restaurante r1 = new Restaurante(null, "Restaurante do Lucas LTDA", "4155545456", "Lucas",
-				"Restaurante do Lucas", Arrays.asList(1, 2));
+		// Restaurante 1
+		Restaurante r1 = new Restaurante(null, "Restaurante A", "12345678000190", // CNPJ fictício
+				"João da Silva", "Comida Boa", new Endereco(null, "Rua A", "123", "Apt 101", "12345-678"),
+				"(11) 5555-5555", "(11) 99999-9999", 4.5, "logo1.jpg", "www.restaurantea.com", "restaurantea_instagram",
+				"restaurantea_facebook", List.of(EspecialidadeRestaurante.PIZZARIA.getCod()));
+
+		// Restaurante 2
+		Restaurante r2 = new Restaurante(null, "Restaurante B", "98765432100055", // CNPJ fictício
+				"Maria Souza", "Sabor Gourmet", new Endereco(null, "Av. B", "456", "Sala 201", "54321-987"),
+				"(22) 3333-3333", "(22) 88888-8888", 4.2, "logo2.jpg", "www.saborgourmet.com", "saborgourmet_instagram",
+				"saborgourmet_facebook", List.of(EspecialidadeRestaurante.JAPONESA.getCod()));
+
+		// Restaurante 3
+		Restaurante r3 = new Restaurante(3, "Restaurante C", "11223344556677", // CNPJ fictício
+				"Pedro Oliveira", "Delícias Caseiras", new Endereco(null, "Rua C", "789", "Casa", "78901-234"),
+				"(33) 4444-4444", "(33) 77777-7777", 4.0, "logo3.jpg", "www.delicias.com", "delicias_instagram",
+				"delicias_facebook", List.of(EspecialidadeRestaurante.ESPETARIA.getCod()));
+
+		// Restaurante 4
+		Restaurante r4 = new Restaurante(4, "Restaurante D", "99887766554433", // CNPJ fictício
+				"Ana Rodrigues", "Sabor Brasileiro", new Endereco(null, "Av. D", "1011", "Sala 301", "98765-432"),
+				"(44) 5555-5555", "(44) 66666-6666", 4.8, "logo4.jpg", "www.saborbrasileiro.com",
+				"saborbrasileiro_instagram", "saborbrasileiro_facebook",
+				List.of(EspecialidadeRestaurante.ESPETARIA.getCod()));
+
+		// Restaurante 5
+		Restaurante r5 = new Restaurante(5, "Restaurante E", "11223344556677", // CNPJ fictício (mesmo CNPJ do
+																				// restaurante 3 para fins de exemplo)
+				"Fernanda Carvalho", "Pizza Express", new Endereco(null, "Rua E", "555", "Apt 501", "55555-555"),
+				"(55) 7777-7777", "(55) 99999-9999", 4.4, "logo5.jpg", "www.pizzaexpress.com", "pizzaexpress_instagram",
+				"pizzaexpress_facebook", List.of(EspecialidadeRestaurante.PIZZARIA.getCod()));
+
+		restauranteRepository.saveAll(Arrays.asList(r1, r2, r3, r4, r5));
 
 		Categoria cat1 = new Categoria(null, "Lanches");
 		Categoria cat2 = new Categoria(null, "Bebidas");
@@ -155,13 +171,13 @@ public class DBService {
 
 		Produto p1 = new Produto(null, "Coca-cola 2l", 15.00, r1);
 		Produto p2 = new Produto(null, "Suco de laranja", 8.00, r1);
-		Produto p3 = new Produto(null, "X-Bacon", 20.00, r1);
+		Produto p3 = new Produto(null, "X-Bacon", 20.00, r2);
 		Produto p5 = new Produto(null, "X-Egg", 18.00, r1);
-		Produto p6 = new Produto(null, "Suco de Morango", 20.00, r1);
-		Produto p7 = new Produto(null, "Pastel de Frango", 10.00, r1);
-		Produto p8 = new Produto(null, "Milk Shake Ovomaltine", 9.00, r1);
+		Produto p6 = new Produto(null, "Suco de Morango", 20.00, r3);
+		Produto p7 = new Produto(null, "Pastel de Frango", 10.00, r4);
+		Produto p8 = new Produto(null, "Milk Shake Ovomaltine", 9.00, r5);
 		Produto p9 = new Produto(null, "Bolo no pote", 6.00, r1);
-		Produto p10 = new Produto(null, "Pastel de queijo", 20.00, r1);
+		Produto p10 = new Produto(null, "Pastel de queijo", 20.00, r4);
 		Produto p11 = new Produto(null, "Dipirona", 6.00, r1);
 
 		// pizza
@@ -307,8 +323,6 @@ public class DBService {
 		p11.getCategorias().addAll(Arrays.asList(cat7));
 		p12.getCategorias().addAll(Arrays.asList(cat3));
 
-		restauranteRepository.save(r1);
-
 		categoriaRepository.saveAll(Arrays.asList(cat1, cat2, cat3, cat4, cat5, cat6, cat7));
 
 		produtoRepository.saveAll(Arrays.asList(p1, p2, p3, p4, p5, p6, p7, p8, p9, p10, p11, p12));
@@ -319,7 +333,7 @@ public class DBService {
 
 		SimpleDateFormat sdf = new SimpleDateFormat("dd/MM/yyyy HH:mm");
 
-		Pedido ped1 = new Pedido(null, sdf.parse("10/09/2022 10:32"), cli1, e1);
+		Pedido ped1 = new Pedido(null, sdf.parse("10/09/2022 10:32"), cli1, e1, r1);
 		Pedido ped2 = new Pedido(null, sdf.parse("10/10/2022 10:50"), cli1, e2);
 
 		Pagamento pgto1 = new PagamentoComCartao(null, EstadoPagamento.QUITADO, ped1, 6);
@@ -347,5 +361,15 @@ public class DBService {
 		p4.getItens().addAll(Arrays.asList(ip1));
 
 		itemPedidoRepository.saveAll(Arrays.asList(ip1, ip2, ip3, ip4));
+
+		Restaurante rTeste = restauranteService.find(1);
+		System.out.println(
+				"////////////////////////////////////////////////////////////////////////////////////////////////////");
+		System.out.println(rTeste.toString());
+		List<Produto> produtos = produtoRepository.findByRestauranteId(r1.getId());
+		for (Produto prod : produtos) {
+			System.out.println(prod.getNome());
+		}
+
 	}
 }
